@@ -1,3 +1,11 @@
+2021-05-12 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c,
+	  src/z80/gen.h,
+	  src/z80/main.c,
+	  src/z80/peep.c:
+	  Infrastructure for non-__z88dk_fastcall register arguments.
+
 2021-05-11 Philipp Klaus Krause <pkk AT spth.de>
 
 	* src/SDCCsymt.c,
